--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -56,17 +56,17 @@
                 app:humidity='@{String.format("%d%s", viewModel.weatherForecastForDate.humidity, "%")}' />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/addNoteContainer"
+                android:id="@+id/addNotesContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="110dp"
-                app:booleanVisibility="@{viewModel.addNoteVisible}"
-                android:onClick="@{() -> viewModel.onAddNoteClick()}">
+                app:booleanVisibility="@{!viewModel.notesVisible}"
+                android:onClick="@{() -> viewModel.onAddNotesClick()}">
 
                 <ImageView
-                    android:id="@+id/addNoteButton"
+                    android:id="@+id/addNotesButton"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     app:layout_constraintTop_toTopOf="parent"
@@ -74,45 +74,44 @@
                     android:src="@drawable/icon_plus_green" />
 
                 <TextView
-                    android:id="@+id/addNoteTextView"
+                    android:id="@+id/addNotesTextView"
                     style="@style/Text.MainControlsHint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/addNoteButton"
-                    app:layout_constraintTop_toTopOf="@id/addNoteButton"
-                    app:layout_constraintBottom_toBottomOf="@id/addNoteButton"
+                    app:layout_constraintStart_toEndOf="@id/addNotesButton"
+                    app:layout_constraintTop_toTopOf="@id/addNotesButton"
+                    app:layout_constraintBottom_toBottomOf="@id/addNotesButton"
                     android:text="@string/add_note" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/noteContainer"
+                android:id="@+id/notesContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="110dp"
-                app:booleanVisibility="@{viewModel.noteVisible}">
+                app:booleanVisibility="@{viewModel.notesVisible}">
 
                 <com.example.lifediary.ui.common.RollOutTextPanel
-                    android:id="@+id/noteView"
+                    android:id="@+id/notesView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/editNoteButton"
+                    app:layout_constraintEnd_toStartOf="@id/editNotesButton"
                     android:layout_marginEnd="8dp"
-                    app:rolledUpMaxLines="@{viewModel.noteRolledUpMaxLines}"
-                    app:text="@{viewModel.noteText}" />
+                    app:text="@{viewModel.notesText}" />
 
                 <ImageView
-                    android:id="@+id/editNoteButton"
+                    android:id="@+id/editNotesButton"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    app:layout_constraintTop_toTopOf="@id/noteView"
-                    app:layout_constraintStart_toEndOf="@id/noteView"
+                    app:layout_constraintTop_toTopOf="@id/notesView"
+                    app:layout_constraintStart_toEndOf="@id/notesView"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:src="@drawable/icon_edit_blue"
-                    android:onClick="@{() -> viewModel.onEditNoteClick()}" />
+                    android:onClick="@{() -> viewModel.onEditNotesClick()}" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
