--- a/app/src/main/res/layout/fragment_add_edit_memorable_date.xml
+++ b/app/src/main/res/layout/fragment_add_edit_memorable_date.xml
@@ -22,15 +22,24 @@
             android:singleLine="true"
             android:hint="@string/what_happened_that_day"
             android:text="@={viewModel.dateName}" />
+        
+        <Spinner
+            android:id="@+id/monthDropDown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/nameInput"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="16dp"
+            android:spinnerMode="dropdown" />
 
         <ImageButton
             android:id="@+id/addDateButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            app:layout_constraintTop_toBottomOf="@id/nameInput"
+            app:layout_constraintTop_toBottomOf="@id/monthDropDown"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/icon_plus_green"
             android:onClick="@{() -> viewModel.onSaveDateClick()}"
             booleanVisibility="@{viewModel.isAddButtonVisible()}" />
@@ -39,10 +48,10 @@
             android:id="@+id/saveDateButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            app:layout_constraintTop_toBottomOf="@id/nameInput"
+            app:layout_constraintTop_toBottomOf="@id/monthDropDown"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/icon_check_green"
             android:onClick="@{() -> viewModel.onSaveDateClick()}"
             booleanVisibility="@{!viewModel.isAddButtonVisible()}" />
