--- a/app/src/main/res/layout/current_weather_view.xml
+++ b/app/src/main/res/layout/current_weather_view.xml
@@ -55,66 +55,33 @@
         android:textSize="14sp"
         tools:text="ощущается как +21°C" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/windContainer"
+    <TextView
+        android:id="@+id/windView"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/feelsLikeView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/humidityContainer"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        android:layout_marginTop="4dp">
-        <ImageView
-            android:id="@+id/windIcon"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/icon_wind_gray" />
+        app:layout_constraintEnd_toStartOf="@id/humidityView"
+        android:layout_marginTop="4dp"
+        android:textSize="12sp"
+        tools:text="3.5м/с"
+        app:drawableStartCompat="@drawable/icon_wind_gray"
+        android:drawablePadding="1dp" />
 
-        <TextView
-            android:id="@+id/windView"
-            style="@style/Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/windIcon"
-            app:layout_constraintBottom_toBottomOf="@id/windIcon"
-            app:layout_constraintStart_toEndOf="@id/windIcon"
-            android:layout_marginStart="1dp"
-            android:textSize="12sp"
-            tools:text="3.5м/с" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/humidityContainer"
+    <TextView
+        android:id="@+id/humidityView"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/feelsLikeView"
-        app:layout_constraintStart_toEndOf="@id/windContainer"
+        app:layout_constraintStart_toEndOf="@id/windView"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="4dp">
-        <ImageView
-            android:id="@+id/humidityIcon"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/icon_humidity_gray" />
-
-        <TextView
-            android:id="@+id/humidityView"
-            style="@style/Text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/humidityIcon"
-            app:layout_constraintBottom_toBottomOf="@id/humidityIcon"
-            app:layout_constraintStart_toEndOf="@id/humidityIcon"
-            android:layout_marginStart="1dp"
-            android:textSize="12sp"
-            tools:text="58%" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginTop="4dp"
+        android:textSize="12sp"
+        tools:text="58%"
+        app:drawableStartCompat="@drawable/icon_humidity_gray"
+        android:drawablePadding="1dp" />
 
     <ProgressBar
         android:id="@+id/progressView"
