--- a/app/src/main/res/layout/fragment_post_addresses.xml
+++ b/app/src/main/res/layout/fragment_post_addresses.xml
@@ -55,15 +55,23 @@
             app:layout_constraintTop_toBottomOf="@id/addPostAddressButton"
             app:layout_constraintBottom_toBottomOf="parent"
             android:text="@string/add_postal_addresses_title"
-            app:booleanVisibility="@{!viewModel.isAddressListVisible()}"
+            app:booleanVisibility="@{viewModel.isEmptyAddressListTitleVisible()}"
             app:drawableBottomCompat="@drawable/icon_letter_blue" />
+
+        <SearchView
+            android:id="@+id/searchPostAddressView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/addPostAddressButton"
+            app:booleanVisibility="@{viewModel.isPostAddressSearchViewVisible()}" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/postAddressListView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/addPostAddressButton"
+            app:layout_constraintTop_toBottomOf="@id/searchPostAddressView"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:scrollbars="vertical"
             tools:listitem="@layout/post_address_list_item"
