--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -118,9 +118,9 @@
             style="@style/Text.MainScreenSection.Notes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/wiFiOffTextContainer"
+            app:layout_constraintTop_toBottomOf="@id/calendarView"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="48dp"
             android:text="@string/notes"
             android:onClick="@{() -> viewModel.onNotesClick()}" />
 
