--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -67,9 +67,9 @@
             app:booleanVisibility="@{viewModel.isCurrentWeatherViewVisible()}"
             app:temperature='@{String.format("%s°C", viewModel.currentTemperature)}'
             app:weatherIconUrl="@{viewModel.currentWeatherIconUrl}"
-            app:description="@{viewModel.currentWeather.description}"
+            app:description="@{viewModel.currentWeather.text}"
             app:temperatureFeelsLike='@{String.format("%s %s°C", @string/feels_like, viewModel.currentTemperatureFeelsLike)}'
-            app:windSpeed='@{String.format("%.1f%s", viewModel.currentWeather.windSpeed, @string/meters_per_second)}'
+            app:windSpeed='@{String.format("%.1f%s", viewModel.currentWeather.windSpeedMetersPerSecond, @string/meters_per_second)}'
             app:humidity='@{String.format("%d%s", viewModel.currentWeather.humidity, "%")}'
             app:progressVisibility="@{viewModel.isCurrentWeatherProgressVisible()}" />
 
